--- a/cs502/index.html
+++ b/cs502/index.html
@@ -119,12 +119,15 @@ bedmunds@andrew.cmu.edu. --></li>
 
 <p><strong>Textbooks</strong></p>
 
-<p>No textbook is required, but the following textbooks may be helpful as references.</p>
 <ul>
-  <li>Bioinformatics Algorithms: An Active Learning Approach<br>
+<li>Bioinformatics Algorithms: An Active Learning Approach<br>
 Phillip Compeau and Pavel Pevzner<br>
 Active Learning Publishers, 2018<br><br>
 </li>
+</ul>
+
+<p>The following textbooks may also be helpful as references.</p>
+<ul>
   <li>An Introduction to Bioinformatics Algorithms<br>
 Neil C. Jones and Pavel Pevzner<br>
 MIT Press, 2004<br><br>
@@ -144,15 +147,15 @@ Chapman Hall, 1995<br>
 <p><strong>Syllabus</strong></p>
 <ul>
   <li>Introductory lecture (1 lecture)</li>
-  <li>DNA mapping (1.5 lecture)</li>
+  <li>DNA mapping (1.5 lectures)</li>
   <li>Motif finding (2 lectures)</li>
   <li>Genome rearrangements (2 lectures)</li>
-  <li>Gene prediction (1 lecture)</li>
-  <li>HMM (1.5 lecture)</li>
   <li>Sequence alignment (2.5 lectures)</li>
   <li>Multiple sequence alignment (1.5 lectures)</li>
   <li>Graph algorithms for DNA sequencing (1 lecture)</li>
   <li>Reconstruction of evolutionary trees (1 or 2 lectures)</li>
+  <li>HMM (1.5 lectures)</li>
+  <li>Gene expression analysis (1 lecture)</li>
   <li>DL for protein structure prediction (2 lectures)</li>
   <li>DL for single cell genomics (2 lectures)</li>
 </li>
