--- a/cs502/index.html
+++ b/cs502/index.html
@@ -120,9 +120,9 @@ bedmunds@andrew.cmu.edu. --></li>
 <p><strong>Textbooks</strong></p>
 
 <ul>
-<li>Bioinformatics Algorithms: An Active Learning Approach<br>
+<li>Bioinformatics Algorithms: An Active Learning Approach (<a href="https://cogniterra.org/course/580/promo" target="\_blank">UIC edition</a>)<br>
 Phillip Compeau and Pavel Pevzner<br>
-Active Learning Publishers, 2018<br><br>
+Active Learning Publishers, 2018<br>
 </li>
 </ul>
 
