--- a/cs502/index.html
+++ b/cs502/index.html
@@ -146,7 +146,7 @@ Chapman Hall, 1995<br>
 
 <p><strong>Syllabus</strong></p>
 <ul>
-  <li>Introductory lecture (1 lecture)</li>
+  <li>Introductory lecture (1 lecture) (Reading: Jones and Pevzner Ch 4 Exhaustive Search)</li>
   <li>DNA mapping (1.5 lectures)</li>
   <li>Motif finding (2 lectures)</li>
   <li>Genome rearrangements (2 lectures)</li>
