--- a/cs502/index.html
+++ b/cs502/index.html
@@ -147,7 +147,7 @@ Chapman Hall, 1995<br>
 <p><strong>Syllabus</strong></p>
 <ul>
   <li>Introductory lecture (1 lecture) (Reading: Jones and Pevzner Ch 4 Exhaustive Search)</li>
-  <li>DNA mapping (1 lecture) (<a href="https://haochenhc.github.io/cs502/" target="\_blank">Slides</a>; Reading: <a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 2)</li>
+  <li>DNA mapping (1 lecture) (<a href="https://haochenhc.github.io/cs502/slides/01_DNA_Mapping.ppt" target="\_blank">Slides</a>; Reading: <a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 2)</li>
   <li>Motif finding (2 lectures)</li>
   <li>Genome rearrangements (2 lectures)</li>
   <li>Sequence alignment (2.5 lectures)</li>
