--- a/cs502/index.html
+++ b/cs502/index.html
@@ -146,9 +146,9 @@ Chapman Hall, 1995<br>
 
 <p><strong>Syllabus</strong></p>
 <ul>
-  <li>Introductory lecture (1 lecture) (Reading: Jones and Pevzner Ch 4 Exhaustive Search)</li>
-  <li>DNA mapping (1 lecture) (<a href="https://haochenhc.github.io/cs502/slides/01_DNA_Mapping.ppt" target="\_blank">Slides</a>; Reading: <a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 2)</li>
-  <li>Motif finding (2 lectures)</li>
+  <li>Introductory lecture (1 lecture)</li>
+  <li>DNA mapping (1 lecture) (<a href="https://haochenhc.github.io/cs502/slides/01_DNA_Mapping.ppt" target="\_blank">Slides</a>)</li>
+  <li>Motif finding (2 lectures) (<a href="https://haochenhc.github.io/cs502/slides/02_motif.pptx" target="\_blank">Slides</a>)</li>
   <li>Genome rearrangements (2 lectures)</li>
   <li>Sequence alignment (2.5 lectures)</li>
   <li>Multiple sequence alignment (1.5 lectures)</li>
@@ -158,7 +158,13 @@ Chapman Hall, 1995<br>
   <li>Gene expression analysis (1 lecture)</li>
   <li>DL for protein structure prediction (2 lectures)</li>
   <li>DL for single cell genomics (2 lectures)</li>
-</li>
+</ul>
+
+<p><strong>Reading assignment</strong></p>
+<ul>
+  <li>Jones and Pevzner Ch 4 Exhaustive Search</li>
+  <li>Reading: <a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 2)</li>
+  <li>Reading: <a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 6)</li>
 </ul>
 
 <hr />
