--- a/cs502/index.html
+++ b/cs502/index.html
@@ -148,7 +148,7 @@ Chapman Hall, 1995<br>
 <ul>
   <li>Introductory lecture (1 lecture)</li>
   <li>DNA mapping (1 lecture) (<a href="https://haochenhc.github.io/cs502/slides/01_DNA_Mapping.ppt" target="\_blank">Slides</a>)</li>
-  <li>Motif finding (2 lectures) (<a href="https://haochenhc.github.io/cs502/slides/01_DNA_Mapping.ppt" target="\_blank">Slides</a>)</li>
+  <li>Motif finding (2 lectures) (<a href="https://haochenhc.github.io/cs502/slides/02_motif.pptx" target="\_blank">Slides</a>)</li>
   <li>Genome rearrangements (2 lectures)</li>
   <li>Sequence alignment (2.5 lectures)</li>
   <li>Multiple sequence alignment (1.5 lectures)</li>
@@ -163,8 +163,8 @@ Chapman Hall, 1995<br>
 <p><strong>Reading assignments</strong></p>
 <ul>
   <li>Jones and Pevzner Ch 4 Exhaustive Search</li>
-  <li>Reading: <a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 2)</li>
-  <li>Reading: <a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 6)</li>
+  <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 2)</li>
+  <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 6)</li>
 </ul>
 
 <hr />
