--- a/cs502/index.html
+++ b/cs502/index.html
@@ -163,8 +163,8 @@ Chapman Hall, 1995<br>
 <p><strong>Reading assignments</strong></p>
 <ul>
   <li>Jones and Pevzner Ch 4 Exhaustive Search</li>
-  <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 2)</li>
-  <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 6)</li>
+  <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 2</li>
+  <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 6</li>
 </ul>
 
 <hr />
