--- a/cs502/index.html
+++ b/cs502/index.html
@@ -165,6 +165,7 @@ Chapman Hall, 1995<br>
   <li>Jones and Pevzner Ch 4 Exhaustive Search</li>
   <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 2</li>
   <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 6</li>
+  <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 5</li>
 </ul>
 
 <hr />
