--- a/cs502/index.html
+++ b/cs502/index.html
@@ -151,8 +151,8 @@ Chapman Hall, 1995<br>
   <li>Motif finding (2 lectures) (<a href="https://haochenhc.github.io/cs502/slides/02_motif.pptx" target="\_blank">Slides</a>)</li>
   <li>Genome rearrangements (2 lectures) (<a href="https://haochenhc.github.io/cs502/slides/03_genome_rearrangement.pptx" target="\_blank">Slides</a>)</li>
   <li>Sequence alignment (2.5 lectures) (<a href="https://haochenhc.github.io/cs502/slides/04_alignment.pptx" target="\_blank">Slides</a>)</li>
-  <li>Multiple sequence alignment (1.5 lectures)</li>
-  <li>Graph algorithms for DNA sequencing (1 lecture)</li>
+  <li>Multiple sequence alignment (1 lectures)</li>
+  <li>Graph algorithms for DNA sequencing (2 lecture) (<a href="https://haochenhc.github.io/cs502/slides/04_alignment.pptx" target="\_blank">Slides</a>)</li>
   <li>Reconstruction of evolutionary trees (1 or 2 lectures)</li>
   <li>HMM (1.5 lectures)</li>
   <li>Gene expression analysis (1 lecture)</li>
@@ -166,6 +166,7 @@ Chapman Hall, 1995<br>
   <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 2</li>
   <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 6</li>
   <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 5</li>
+  <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 3</li>
 </ul>
 
 <hr />
