--- a/cs502/index.html
+++ b/cs502/index.html
@@ -167,6 +167,7 @@ Chapman Hall, 1995<br>
   <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 6</li>
   <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 5</li>
   <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 3</li>
+  <li><a href="https://cogniterra.org/course/580/promo" target="\_blank">Compeau and Pevzner</a> Ch 7</li>
 </ul>
 
 <hr />
