--- a/cs502/index.html
+++ b/cs502/index.html
@@ -153,7 +153,7 @@ Chapman Hall, 1995<br>
   <li>Sequence alignment (2.5 lectures) (<a href="https://haochenhc.github.io/cs502/slides/04_alignment.pptx" target="\_blank">Slides</a>)</li>
   <li>Multiple sequence alignment (1 lecture)</li>
   <li>Graph algorithms for DNA sequencing (2 lectures) (<a href="https://haochenhc.github.io/cs502/slides/05_genome_assembly.pptx" target="\_blank">Slides</a>)</li>
-  <li>Reconstruction of evolutionary trees (1 or 2 lectures)</li>
+  <li>Reconstruction of evolutionary trees (3 lectures) (<a href="https://haochenhc.github.io/cs502/slides/05_genome_assembly.pptx" target="\_blank">Slides</a>)</li>
   <li>HMM (1.5 lectures)</li>
   <li>Gene expression analysis (1 lecture)</li>
   <li>DL for protein structure prediction (2 lectures)</li>
