--- a/cs502/index.html
+++ b/cs502/index.html
@@ -155,7 +155,7 @@ Chapman Hall, 1995<br>
   <li>Graph algorithms for DNA sequencing (2 lectures) (<a href="https://haochenhc.github.io/cs502/slides/05_genome_assembly.pptx" target="\_blank">Slides</a>)</li>
   <li>Reconstruction of evolutionary trees (3 lectures) (<a href="https://haochenhc.github.io/cs502/slides/06_evolutionary_tree.pptx" target="\_blank">Slides</a>)</li>
   <li>HMM (1.5 lectures) (<a href="https://haochenhc.github.io/cs502/slides/07_hmm.pptx" target="\_blank">Slides</a>)</li>
-  <li>Gene expression analysis (1 lecture)</li>
+  <li>Gene expression analysis (1 lecture) (<a href="https://haochenhc.github.io/cs502/slides/08_clustering.pptx" target="\_blank">Slides</a>)</li>
   <li>DL for protein structure prediction (2 lectures)</li>
   <li>DL for single cell genomics (2 lectures)</li>
 </ul>
