--- a/cs502/index.html
+++ b/cs502/index.html
@@ -147,15 +147,15 @@ Chapman Hall, 1995<br>
 <p><strong>Syllabus</strong></p>
 <ul>
   <li>Introductory lecture (1 lecture)</li>
-  <li>DNA mapping (1 lecture) (<a href="https://haochenhc.github.io/cs502/slides/01_DNA_Mapping.ppt" target="\_blank">Slides</a>)</li>
-  <li>Motif finding (2 lectures) (<a href="https://haochenhc.github.io/cs502/slides/02_motif.pptx" target="\_blank">Slides</a>)</li>
-  <li>Genome rearrangements (2 lectures) (<a href="https://haochenhc.github.io/cs502/slides/03_genome_rearrangement.pptx" target="\_blank">Slides</a>)</li>
-  <li>Sequence alignment (2.5 lectures) (<a href="https://haochenhc.github.io/cs502/slides/04_alignment.pptx" target="\_blank">Slides</a>)</li>
+  <li>DNA mapping (1 lecture) (<a href="#" target="\_blank">Slides</a>)</li>
+  <li>Motif finding (2 lectures) (<a href="#" target="\_blank">Slides</a>)</li>
+  <li>Genome rearrangements (2 lectures) (<a href="#" target="\_blank">Slides</a>)</li>
+  <li>Sequence alignment (2.5 lectures) (<a href="#" target="\_blank">Slides</a>)</li>
   <li>Multiple sequence alignment (1 lecture)</li>
-  <li>Graph algorithms for DNA sequencing (2 lectures) (<a href="https://haochenhc.github.io/cs502/slides/05_genome_assembly.pptx" target="\_blank">Slides</a>)</li>
-  <li>Reconstruction of evolutionary trees (3 lectures) (<a href="https://haochenhc.github.io/cs502/slides/06_evolutionary_tree.pptx" target="\_blank">Slides</a>)</li>
-  <li>HMM (1.5 lectures) (<a href="https://haochenhc.github.io/cs502/slides/07_hmm.pptx" target="\_blank">Slides</a>)</li>
-  <li>Gene expression analysis (1 lecture) (<a href="https://haochenhc.github.io/cs502/slides/08_clustering.pptx" target="\_blank">Slides</a>)</li>
+  <li>Graph algorithms for DNA sequencing (2 lectures) (<a href="#" target="\_blank">Slides</a>)</li>
+  <li>Reconstruction of evolutionary trees (3 lectures) (<a href="#" target="\_blank">Slides</a>)</li>
+  <li>HMM (1.5 lectures) (<a href="#" target="\_blank">Slides</a>)</li>
+  <li>Gene expression analysis (1 lecture) (<a href="#" target="\_blank">Slides</a>)</li>
   <li>DL for protein structure prediction (2 lectures)</li>
   <li>DL for single cell genomics (2 lectures)</li>
 </ul>
@@ -179,7 +179,7 @@ Chapman Hall, 1995<br>
 </p>
 
 <p><strong>Paper presentation</strong></p>
-<p>Choose a paper from the Proceedings of RECOMB <a href="https://recomb.org/recomb2023/program.html" target="_blank">2023</a> or <a href="https://recomb.org/recomb2024/program.html" target="_blank">2024</a>. Reserve your spot early using the provided <a href="https://docs.google.com/spreadsheets/d/1782iFPu_ml61zhT--kbiAKU8ZRrQAAqm6Bb2PItaISc/edit?usp=sharing" target="_blank">sign-up sheet</a>. Presentations will begin on March 20th and continue through the last week of instruction, ending on Thursday, May 1st. Please email your PowerPoint file to me at least two days before your scheduled presentation. Each presentation should last approximately 20 minutes, followed by 5 minutes for audience questions.
+<p>Choose a paper from the Proceedings of RECOMB <a href="https://recomb.org/recomb2023/program.html" target="_blank">2023</a> or <a href="https://recomb.org/recomb2024/program.html" target="_blank">2024</a>. Reserve your spot early using the provided <a href="#" target="_blank">sign-up sheet</a>. Presentations will begin on March 20th and continue through the last week of instruction, ending on Thursday, May 1st. Please email your PowerPoint file to me at least two days before your scheduled presentation. Each presentation should last approximately 20 minutes, followed by 5 minutes for audience questions.
 </p>
 <p>
 Ensure your presentation covers the following sections: (1) Biological background (~3 minutes): introduce the biological context. For example, if the paper discusses protein structure prediction, explain what proteins are, the significance of their structure, how it is determined, and why it matters. (2) Computational problem overview (~2 minutes): highlight the main computational problems addressed in the paper and the prediction target. (3) Existing approaches (~2 minutes): briefly discuss existing algorithms or methods used to solve the stated problem. (4) Proposed method (~5 minutes): describe the method introduced in the paper in detail. (5) Results (~5 minutes): summarize the key findings and results presented in the paper. (6) Future directions (~3 minutes): conclude with potential future research directions based on the paper's work.
